Update acknowledgments in multiple GUI files to include new contributors